examples/tests/Promote/midamble.v
Fail Definition f := True.

Definition i := True.
Reset i.
